Add click logic and counter

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 
 	<h1>Cat Clicker</h1>
 
+	<main>
+		<img src="img/cat-01.jpg">
+		<span>0</span>
+	</main>
+
+	<script src="app.js"></script>
 </body>
 </html>
