Update html and css structure

--- a/index.html
+++ b/index.html
@@ -7,12 +7,44 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<!-- header -->
+	<header>
+		<h1>cat clicker</h1>
+	</header>
 
-	<h1>Cat Clicker</h1>
+	<!-- cat board -->
+	<main class="board">
+		
+		<div class="cat">
+			<img class="cat-img" src="img/cat-01.jpg">
+			<p class="cat-info">
+				<span class="cat-name">Pixel</span>
+				<span class="cat-count">12</span>
+			</p>			
+		</div>
+		<div class="cat">
+			<img class="cat-img" src="img/cat-01.jpg">
+			<p class="cat-info">
+				<span class="cat-name">Pixel</span>
+				<span class="cat-count">12</span>
+			</p>			
+		</div>
+		<div class="cat">
+			<img class="cat-img" src="img/cat-01.jpg">
+			<p class="cat-info">
+				<span class="cat-name">Pixel</span>
+				<span class="cat-count">12</span>
+			</p>			
+		</div>
+		<div class="cat">
+			<img class="cat-img" src="img/cat-01.jpg">
+			<p class="cat-info">
+				<span class="cat-name">Pixel</span>
+				<span class="cat-count">12</span>
+			</p>			
+		</div>
 
-	<main>
-		<img src="img/cat-01.jpg">
-		<span>0</span>
+
 	</main>
 
 	<script src="app.js"></script>
