--- a/index.html
+++ b/index.html
@@ -13,39 +13,7 @@
 	</header>
 
 	<!-- cat board -->
-	<main class="board">
-		
-		<div class="cat">
-			<img class="cat-img" src="img/cat-01.jpg">
-			<p class="cat-info">
-				<span class="cat-name">Pixel</span>
-				<span class="cat-count">12</span>
-			</p>			
-		</div>
-		<div class="cat">
-			<img class="cat-img" src="img/cat-01.jpg">
-			<p class="cat-info">
-				<span class="cat-name">Pixel</span>
-				<span class="cat-count">12</span>
-			</p>			
-		</div>
-		<div class="cat">
-			<img class="cat-img" src="img/cat-01.jpg">
-			<p class="cat-info">
-				<span class="cat-name">Pixel</span>
-				<span class="cat-count">12</span>
-			</p>			
-		</div>
-		<div class="cat">
-			<img class="cat-img" src="img/cat-01.jpg">
-			<p class="cat-info">
-				<span class="cat-name">Pixel</span>
-				<span class="cat-count">12</span>
-			</p>			
-		</div>
-
-
-	</main>
+	<main class="board"></main>
 
 	<script src="app.js"></script>
 </body>
