--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 	</header>
 
 	<!-- cat board -->
-	<main class="board"></main>
+	<main class="main">
+		<ul class="cat-list"></ul>
+		<div class="cat-view"></div>
+	</main>
 
 	<script src="app.js"></script>
 </body>
