--- a/vanillajs/index.html
+++ b/vanillajs/index.html
@@ -34,6 +34,8 @@
 		<section class="cat-view"></section>
 	</div>
 
-	<script src="app.js"></script>
+	<script src="js/model.js"></script>
+	<script src="js/view.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
