--- a/vanillajs/index.html
+++ b/vanillajs/index.html
@@ -32,6 +32,15 @@
 
 		<!-- cat view -->
 		<section class="cat-view"></section>
+		<script type="text/template" class="cat-template">
+			<div class="cat" data-id="%id%">
+				<p class="cat-info">
+					<span class="cat-name">%name%</span>
+					<span class="cat-count">%count%</span>
+				</p>
+				<img class="cat-img" src="img/%src%.jpg">
+			</div>
+		</script>
 	</div>
 
 	<script src="js/model.js"></script>
