create show and hide admin functions

--- a/vanillajs/index.html
+++ b/vanillajs/index.html
@@ -18,14 +18,14 @@
 
         <!-- cat list -->
         <section class="cat-list">
-            <div class="btn btn-large admin">add new cat</div>
             <ul></ul>
+            <div class="btn btn-large admin">add new cat</div>
         </section>
 
         <!-- add new cat -->
         <section class="admin-form">
-            <input type="text" class="cat-name" placeholder="name">
-            <input type="text" class="cat-url" placeholder="image url">
+            <input type="text" class="name" placeholder="name">
+            <input type="text" class="url" placeholder="image url">
             <div class="btn cancel">cancel</div>
             <div class="btn save">add</div>
         </section>
