finish add new cat function

--- a/vanillajs/index.html
+++ b/vanillajs/index.html
@@ -19,7 +19,7 @@
         <!-- cat list -->
         <section class="cat-list">
             <ul></ul>
-            <div class="btn btn-large admin">add new cat</div>
+            <div class="btn btn-large admin">+ add new cat</div>
         </section>
 
         <!-- add new cat -->
@@ -38,7 +38,7 @@
                     <span class="cat-name">%name%</span>
                     <span class="cat-count">%count%</span>
                 </p>
-                <img class="cat-img" src="img/%src%.jpg">
+                <img class="cat-img" src="%src%">
             </div>
         </script>
     </div>
