--- a/knockoutjs/index.html
+++ b/knockoutjs/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	<div data-bind="with: currentCat()">
+	<div data-bind="with: currentCat">
 		<h2 data-bind="text: name"></h2>
 		<h3 data-bind="text: level"></h3>
 		<p data-bind="text: count"></p>
