finish first knockout version

--- a/knockoutjs/index.html
+++ b/knockoutjs/index.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>Cat List</h1>
 	<ul data-bind="foreach: catList">
-		<li data-bind="text: $data.name, click: $parent.changeCurrent.bind($data, $index())"></li>
+		<li data-bind="text: $data.name, click: $parent.changeCurrent"></li>
 	</ul>
 	<div data-bind="with: currentCat">
 		<h2 data-bind="text: name"></h2>
