--- a/knockoutjs/index.html
+++ b/knockoutjs/index.html
@@ -1,28 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Cat Clicker</title>
+    <meta charset="utf-8">
+    <title>Cat Clicker</title>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<h1>Cat List</h1>
-	<ul data-bind="foreach: catList">
-		<li data-bind="text: $data.name, click: $parent.changeCurrent"></li>
-	</ul>
-	<div data-bind="with: currentCat">
-		<h2 data-bind="text: name"></h2>
-		<h3 data-bind="text: level"></h3>
-		<p data-bind="text: count"></p>
-		<h3>Nicknames</h3>
-		<ul data-bind="foreach: nicks">
-			<li data-bind="text: $data"></li>
-		</ul>
+    <div class="container">
 
-		<img src="" alt="cute cat" data-bind="attr: {src: image}, click: $parent.increment">
-	</div>
+        <!-- header -->
+        <header class="main-header">
+            <h1>cat clicker</h1>
+            <h2>Developed by Caue Queiroz</h2>
+        </header>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
-	<script src="model.js"></script>
-	<script src="app.js"></script>
+        <!-- cat list -->
+        <section class="cat-list">
+            <ul></ul>
+            <div class="btn btn-large admin">+ add new cat</div>
+        </section>
+
+        <!-- add new cat -->
+        <section class="admin-form">
+            <input type="text" class="name" placeholder="name">
+            <input type="text" class="url" placeholder="image url">
+            <div class="btn cancel">cancel</div>
+            <div class="btn save">add</div>
+        </section>
+
+        <!-- cat view -->
+        <section class="cat-view"></section>
+        <script type="text/template" class="cat-template">
+            <div class="cat" data-id="%id%">
+                <p class="cat-info">
+                    <span class="cat-count">%count%</span>
+                    <span class="cat-name">%name%</span>
+                </p>
+                <img class="cat-img" src="%src%">
+            </div>
+        </script>
+    </div>
+
+    <!-- KnockoutJS and App Engine  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
+    <script src="js/model.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
