Add angularjs to project

--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -41,5 +41,8 @@
             </div>
         </section>
     </div>
+
+    <!-- AngularJS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
 </body>
 </html>
