--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
     <link rel="stylesheet" href="main.css">
 </head>
-<body>
+<body ng-app="CatClicker">
     <div class="container">
 
         <!-- header -->
@@ -44,5 +44,7 @@
 
     <!-- AngularJS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
+    <!-- App -->
+    <script src="js/app.js"></script>
 </body>
 </html>
