--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -17,10 +17,7 @@
         </header>
 
         <!-- cat list -->
-        <section class="cat-list">
-            <ul></ul>
-            <div class="btn btn-large admin">+ add new cat</div>
-        </section>
+        <section class="cat-list" ng-include="'view/cat-list.html'" ng-controller="listCtrl as list"></section>
 
         <!-- add new cat -->
         <section class="admin-form">
@@ -46,5 +43,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
     <!-- App -->
     <script src="js/app.js"></script>
+    <!-- Controller -->
+    <script src="js/controller/cat-list.js"></script>
 </body>
 </html>
