--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -45,5 +45,7 @@
     <script src="js/app.js"></script>
     <!-- Controller -->
     <script src="js/controller/cat-list.js"></script>
+    <!-- Service -->
+    <script src="js/service/cat-model.js"></script>
 </body>
 </html>
