--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -37,6 +37,7 @@
     <script src="js/app.js"></script>
     <!-- Controller -->
     <script src="js/controller/cat-list.js"></script>
+    <script src="js/controller/cat-info.js"></script>
     <!-- Service -->
     <script src="js/service/cat-model.js"></script>
 </body>
