--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -28,7 +28,7 @@
         </section>
 
         <!-- cat view -->
-        <section class="cat-view" ng-include="'view/cat-info.html'" ng-controller="infoCtrl as cat"></section>
+        <section class="cat-view" ng-include="'view/cat-info.html'" ng-controller="infoCtrl as info"></section>
     </div>
 
     <!-- AngularJS -->
