Import angularjs to project

--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -31,20 +31,19 @@
         </section>
 
         <!-- cat view -->
-        <section class="cat-view"></section>
-        <script type="text/template" class="cat-template">
-            <div class="cat" data-id="%id%">
+        <section class="cat-view">
+            <div class="cat">
                 <p class="cat-info">
-                    <span class="cat-count">%count%</span>
-                    <span class="cat-name">%name%</span>
+                    <span class="cat-count"></span>
+                    <span class="cat-name"></span>
                 </p>
-                <img class="cat-img" src="%src%">
+                <img class="cat-img" src="">
             </div>
-        </script>
+        </section>
     </div>
 
-    <script src="js/model.js"></script>
-    <script src="js/view.js"></script>
+    <!-- AngularJS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
