--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
     <link rel="stylesheet" href="main.css">
 </head>
-<body ng-app="CatClicker">
+<body ng-app="CatClicker" ng-controller="CatClickerCtrl as CatClicker">
     <div class="container">
 
         <!-- header -->
@@ -34,8 +34,8 @@
         <section class="cat-view">
             <div class="cat">
                 <p class="cat-info">
-                    <span class="cat-count"></span>
-                    <span class="cat-name"></span>
+                    <span class="cat-count">{{CatClicker.currentCat.count}}</span>
+                    <span class="cat-name">{{CatClicker.currentCat.name}}</span>
                 </p>
                 <img class="cat-img" src="">
             </div>
@@ -44,6 +44,8 @@
 
     <!-- AngularJS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
+    
     <script src="js/app.js"></script>
+    <script src="js/controllers/cat-clicker.js"></script>
 </body>
 </html>
