Create list controller

--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -47,5 +47,6 @@
     
     <script src="js/app.js"></script>
     <script src="js/controllers/cat-clicker.js"></script>
+    <script src="js/controllers/list.js"></script>
 </body>
 </html>
