--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
     <link rel="stylesheet" href="main.css">
 </head>
-<body ng-app="CatClicker" ng-controller="CatClickerCtrl as CatClicker">
+<body ng-app="CatClicker">
     <div class="container">
 
         <!-- header -->
@@ -17,7 +17,7 @@
         </header>
 
         <!-- cat list -->
-        <section class="cat-list">
+        <section class="cat-list" ng-controller="ListCtrl as list">
             <ul></ul>
             <div class="btn btn-large admin">+ add new cat</div>
         </section>
@@ -46,7 +46,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
     
     <script src="js/app.js"></script>
-    <script src="js/controllers/cat-clicker.js"></script>
+    <script src="js/services/cat-clicker.js"></script>
     <script src="js/controllers/list.js"></script>
 </body>
 </html>
