--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -51,5 +51,6 @@
     <script src="js/app.js"></script>
     <script src="js/services/cat-clicker.js"></script>
     <script src="js/controllers/list.js"></script>
+    <script src="js/controllers/info.js"></script>
 </body>
 </html>
