--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -40,7 +40,7 @@
                     <span class="cat-count">{{info.cat.count}}</span>
                     <span class="cat-name">{{info.cat.name}}</span>
                 </p>
-                <img class="cat-img" ng-src="{{info.cat.src}}">
+                <img class="cat-img" ng-src="{{info.cat.src}}" ng-click="info.likeCat()">
             </div>
         </section>
     </div>
