Open and close admin panel

--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -30,7 +30,7 @@
             <input type="text" class="name" placeholder="name">
             <input type="text" class="url" placeholder="image url">
             <div class="btn cancel" ng-click="admin.closeAdmin()">cancel</div>
-            <div class="btn save">add</div>
+            <div class="btn save" ng-click="admin.saveAdmin()">add</div>
         </section>
 
         <!-- cat view -->
