create new cat function

--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -27,8 +27,8 @@
 
         <!-- add new cat -->
         <section class="admin-form" ng-controller="adminCtrl as admin" ng-show="admin.show">
-            <input type="text" class="name" placeholder="name">
-            <input type="text" class="url" placeholder="image url">
+            <input type="text" class="name" placeholder="name" ng-model="admin.newCat.name">
+            <input type="text" class="url" placeholder="image url" ng-model="admin.newCat.image">
             <div class="btn cancel" ng-click="admin.closeAdmin()">cancel</div>
             <div class="btn save" ng-click="admin.saveAdmin()">add</div>
         </section>
